Add body background.

--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ html {
 }
 
 body {
+  background-color: var(--color-very-dark-blue);
   display: grid;
   place-content: center;
   min-height: 100vh;
