--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -30,6 +30,7 @@ html {
 }
 
 body {
+    background-color: var(--color-very-dark-blue);
     // centering content
     display: grid;
     place-content: center;
